<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="StatusbarFarbe" Id="{b627dc4c-43b8-406f-bb47-1e3b99b1fc79}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
TYPE StatusbarFarbe :
(
	default := 0,
	rot :=1,
	orange := 2,
	gruen := 3,
	blau := 4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>