<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Ablauf_Konfig" Id="{13171cc2-7d35-4535-a23d-c74c0819be3f}">
    <Declaration><![CDATA[TYPE ST_Ablauf_Konfig :
STRUCT
	nNummer:				UINT;
	eAblaufStatus:			AblaufStatus;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>