<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Aktor_Konfig" Id="{500b0bcd-e7d8-496b-8765-3c5835d92dc4}">
    <Declaration><![CDATA[TYPE ST_Aktor_Konfig :
STRUCT
	//eTyp:					Aktortyp;					braucht es dies?
	//nNummer:				UINT;						ist neu in ST_Ablauf_Konfig
	//eAblaufStatus:		AblaufStatus;				ist neu in ST_Ablauf_Konfig
	//bSensRuhePos:			BOOL;						neu als INT, Dropdown im HMI
	//bSensArbeitsPos:		BOOL;						neu als INT, Dropdown im HMI
	nSensRuhePos:			INT;
	nSensArbeitsPos:		INT;
	nFahrZeit:				UINT;
	tFahrZeit:				TIME;
	nHalteZeit:				UINT;
	tHalteZeit:				TIME;
	bReversierBetrieb:		BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>