<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_QrCode" Id="{4a9c0cca-7600-43b7-a469-a4e8ce3ecbe4}">
    <Declaration><![CDATA[TYPE ST_QrCode :
STRUCT
	sAuftrag:			STRING;
	sArtikel:			STRING;
	sAuftragsmenge:		STRING;
	sEndTermin:			STRING;
	
	bGueltig:			BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>